# hospital-analysis-project

./: README.md  main.py  pyproject.toml
Power BI/: Hospital-dashboard.pbix
data/: admissions.csv  hospital_clean_data.csv  patients.csv
notebooks/: hospital_eda.ipynb
sql/: hospital_kpi_queries.sql
